--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
-    "builds": [
-      {
-        "src": "api/translate.py",
-        "use": "@vercel/python"
+    "functions": {
+      "api/*.py": {
+        "runtime": "python3.11"
       }
+    },
+    "builds": [
+      { "src": "api/*.py", "use": "@vercel/python" }
     ],
     "routes": [
-      {
-        "src": "/translate",
-        "dest": "/api/translate.py"
-      }
+      { "src": "/(.*)", "dest": "/api/main.py" }
     ]
   }
   
