--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,5 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.118.0",
     "httpx>=0.28.1",
-    "python-dotenv>=1.1.1",
-    "uvicorn>=0.37.0",
+    "python-dotenv>=1.1.1"
 ]
